--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^5.2.3",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
