--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4"
   },
