--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,49 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@ui-kitten/components": "^5.3.1",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "html-entities": "^2.5.2",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-paper": "^5.12.3"
+    "react-native-device-info": "^10.13.1",
+    "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-material-menu": "^2.0.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modalize": "^1.0.0-alpha.9",
+    "react-native-paper": "^5.12.3",
+    "react-native-popup-menu": "^0.16.1",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "tamagui": "^1.94.4",
+    "use-force-update": "^1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "babel-preset-react-native": "^4.0.1"
   },
   "private": true
 }
