--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.2.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4"
